{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 176,
  "lineage": "12291419-e436-ac37-4cc3-90cf6aeecc01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0096d12160079ddd2",
            "domain": "vpc",
            "id": "eipalloc-0096d12160079ddd2",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-108-95-136.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.95.136",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Demo-NAT-EIP"
            },
            "tags_all": {
              "Name": "Demo-NAT-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0567e0d2b4b2169ae",
            "arn": "arn:aws:ec2:ap-south-1:621260010449:instance/i-079102b3f7d5ebd35",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-079102b3f7d5ebd35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "g",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a98ca662150beb7f",
            "private_dns": "ip-172-26-1-141.ap-south-1.compute.internal",
            "private_ip": "172.26.1.141",
            "public_ip": "13.233.75.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-034e6f13442a572a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0426be0a2984197bb",
            "tags": {
              "Name": "Demo-server"
            },
            "tags_all": {
              "Name": "Demo-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065b0ea93df7d2573"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621260010449:internet-gateway/igw-0afdec1e9970dd938",
            "id": "igw-0afdec1e9970dd938",
            "owner_id": "621260010449",
            "tags": {
              "Name": "Demo-IGW"
            },
            "tags_all": {
              "Name": "Demo-IGW"
            },
            "vpc_id": "vpc-001fd15943b9c2c6f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0096d12160079ddd2",
            "connectivity_type": "public",
            "id": "nat-0ff8498e0e9b20c45",
            "network_interface_id": "eni-0b89a0a11bd0a2300",
            "private_ip": "172.26.1.96",
            "public_ip": "3.108.95.136",
            "subnet_id": "subnet-0426be0a2984197bb",
            "tags": {
              "Name": "Demo-NAT-GW"
            },
            "tags_all": {
              "Name": "Demo-NAT-GW"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621260010449:route-table/rtb-01c33ca23977d7a10",
            "id": "rtb-01c33ca23977d7a10",
            "owner_id": "621260010449",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ff8498e0e9b20c45",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Demo-private-rt"
            },
            "tags_all": {
              "Name": "Demo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-001fd15943b9c2c6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621260010449:route-table/rtb-035946eac86769afd",
            "id": "rtb-035946eac86769afd",
            "owner_id": "621260010449",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0afdec1e9970dd938",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Demo-public-rt"
            },
            "tags_all": {
              "Name": "Demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-001fd15943b9c2c6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05705bc596606d75d",
            "route_table_id": "rtb-01c33ca23977d7a10",
            "subnet_id": "subnet-01f96666ff38cc8d9"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042dbb6af32d35315",
            "route_table_id": "rtb-01c33ca23977d7a10",
            "subnet_id": "subnet-00241f9b29ccec44c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd5f945d69fc58c2",
            "route_table_id": "rtb-035946eac86769afd",
            "subnet_id": "subnet-0426be0a2984197bb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba5eeaee3f63ba79",
            "route_table_id": "rtb-035946eac86769afd",
            "subnet_id": "subnet-021ee3e3009262112"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621260010449:security-group/sg-065b0ea93df7d2573",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065b0ea93df7d2573",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "621260010449",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Demo-SG"
            },
            "tags_all": {
              "Name": "Demo-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-001fd15943b9c2c6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621260010449:subnet/subnet-01f96666ff38cc8d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.26.3.0/24",
            "id": "subnet-01f96666ff38cc8d9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "621260010449",
            "tags": {
              "Name": "Demo-Pri-Subnet-1"
            },
            "tags_all": {
              "Name": "Demo-Pri-Subnet-1"
            },
            "vpc_id": "vpc-001fd15943b9c2c6f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621260010449:subnet/subnet-00241f9b29ccec44c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.26.4.0/24",
            "id": "subnet-00241f9b29ccec44c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "621260010449",
            "tags": {
              "Name": "Demo-Pri-Subnet-2"
            },
            "tags_all": {
              "Name": "Demo-Pri-Subnet-2"
            },
            "vpc_id": "vpc-001fd15943b9c2c6f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621260010449:subnet/subnet-0426be0a2984197bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.26.1.0/24",
            "id": "subnet-0426be0a2984197bb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "621260010449",
            "tags": {
              "Name": "Demo-Pub-Subnet-1"
            },
            "tags_all": {
              "Name": "Demo-Pub-Subnet-1"
            },
            "vpc_id": "vpc-001fd15943b9c2c6f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621260010449:subnet/subnet-021ee3e3009262112",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.26.2.0/24",
            "id": "subnet-021ee3e3009262112",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "621260010449",
            "tags": {
              "Name": "Demo-Pub-Subnet-2"
            },
            "tags_all": {
              "Name": "Demo-Pub-Subnet-2"
            },
            "vpc_id": "vpc-001fd15943b9c2c6f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621260010449:vpc/vpc-001fd15943b9c2c6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.26.0.0/16",
            "default_network_acl_id": "acl-07a4f6847a39f932b",
            "default_route_table_id": "rtb-0a93ad7fd8ceee025",
            "default_security_group_id": "sg-0a129a11b435e64f3",
            "dhcp_options_id": "dopt-00e703ecbf9615ef9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-001fd15943b9c2c6f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a93ad7fd8ceee025",
            "owner_id": "621260010449",
            "tags": {
              "Name": "Demo-VPC"
            },
            "tags_all": {
              "Name": "Demo-VPC"
            }
          }
        }
      ]
    }
  ]
}